# neurons.npm

./: .gitignore  .gitmodules  .npmrc  README.md  domains.txt  index.js  jsdoc.json  media_outlets.md  package-lock.json  package.json  process.json  social_medias.md
.github/: FUNDING.yml  package.json
_servers/: readme.md
_servers/neurobot/: package.json  server.js
apps/: Apps_README.md
apps/neurobot/: README.md  package-lock.json  savedPosts.json
apps/neurobot/src/: routes.js  routes2.js
apps/neurobot/views/: home.ejs  index.ejs  redditInterface.ejs
daemon/: Cargo.toml
data/: Express and Vite.md  social_medias.md
docs/: Foros.md  Git_Modules.md  accounts.md  domains.txt  orgs.md  social_medias_platforms.md  todo.md
domains/docs.neurons.me/: index.html  package-lock.json
domains/downloads.neurons.me/: index.html
domains/downloads.neurons.me/mac/: README.MD
domains/media.neurons.me/: index.html
domains/neurons.me/: README.md  index.html  package-lock.json  package.json
domains/neurons.me/public/: monad.js
domains/neurons.me/src/: App.jsx  i18n.js  main.jsx
domains/root/neurons.me/: package.json  vite.config.js
rootDomain/: package-lock.json  package.json  vite.config.js
rootDomain/src/: App.jsx
rootDomain/src/context/: ThemeContext.jsx
rootDomain/src/pages/: NotFound.jsx
src/: netgetGateway.js  neuroverse.cli.js  pm2.config.js
src/cli/: app.cli.js
src/data/: accounts.json  apps.json  domains.json  medias.json
subDomains/docs/: index.html  package-lock.json  vite.config.js
subDomains/media/: .env.example  package-lock.json
(+402 files in other folders)
