[package]
name = "neurons"
version = "0.1.0"
edition = "2021"
authors = ["suiGn <suiGn"]
description = "Daemon and toolkit for neurons.me – enabling modular, decentralized systems and identity-aware automation."
license = "MIT OR Apache-2.0"
repository = "https://github.com/neurons-me/neurons"
homepage = "https://neurons.me"
readme = "README.md"
keywords = ["neurons", "daemon", "modular", "identity", "decentralized"]
categories = ["network-programming", "command-line-utilities"]
exclude = ["target/*", ".gitignore", ".vscode/*"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tracing = "0.1"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"